# nba-odds-history-hub

./: .gitignore  PROJECT_STATUS.md  README.md  index.html  pyproject.toml  readiness.html
.github/: run-once-source-health-20260720.txt
config/: automation-sources.json  bookmaker-registry.json  disabled-import-request-contract-v1.json  disabled-manual-import-command-plan-v1.json  manual-schedule-import-preflight-v1.json  market-taxonomy-v1.json  nba-team-registry-v1.json  official-schedule-adapter-contract-v1.json  offseason-capture-readiness-v1.json  preseason-approval-state-machine-v1.json  preseason-change-control-matrix-v1.json  preseason-owner-review-packet-v1.json  preseason-readiness-v1.json  schedule-adapter-output-gate-contract-v1.json  schedule-import-contract-v1.json  season-configuration-v1.json  source-provider-metadata-contract-v1.json  source-registry.json
data/: disabled-import-request-contract-declaration-v1.json  manual-schedule-import-preflight-current-status-v1.json  offseason-aggregate-metadata-dashboard-current-status-v1.json  offseason-database-dashboard-current-status-v1.json  offseason-provider-schedule-adapter-current-status-v1.json  offseason-reference-foundation-current-status-v1.json  offseason-schedule-mapping-current-status-v1.json  phase2-odds-capture-request-v1.json  preseason-dry-run-current-status-v1.json  preseason-owner-review-current-status-v1.json
docs/: data-contract.md  disabled-import-request-contract-v1.md  full-automation.md  manual-import.md  manual-schedule-import-preflight-v1.md  metadata-registry-output-gate-v1.md  (+19 more)
(+88 files in other folders)
