[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-odds-history-hub"
version = "0.4.1"
description = "Timestamped NBA odds ingestion, normalization, storage, and export hub."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "qoo109" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "jsonschema>=4.23,<5.0"]

[project.scripts]
odds-hub-import = "nba_odds_history_hub.cli:main"
odds-hub-build-history = "nba_odds_history_hub.history_cli:main"
odds-hub-validate-intake = "nba_odds_history_hub.intake_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
